# emx-txtar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: content_detection.rs  txtar_basic.rs
src/: archive.rs  decoder.rs  encoder.rs  lib.rs
