[package]
name = "emx-txtar"
version = "0.1.0"
edition = "2021"
authors = ["nzinfo <li.monan@gmail.com>"]
license = "MIT"
repository = "https://github.com/coreseekdev/emx-txtar"
description = "Txtar archive format support with binary file encoding"

[dependencies]
anyhow = "1.0"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.12"
