[package]
name = "emx-txtar"
version = "0.1.0"
edition = "2021"
authors = ["nzinfo <li.monan@gmail.com>"]
license = "MIT"
repository = "https://github.com/coreseekdev/emx-txtar"
description = "Txtar archive format support with binary file encoding"

[[bin]]
name = "emx-txtar"
path = "src/bin/emx-txtar.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.4", features = ["derive"], optional = true }
walkdir = { version = "2.5", optional = true }

[dev-dependencies]
tempfile = "3.12"

[features]
default = ["cli"]
cli = ["clap", "walkdir"]
